--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "@react-navigation/stack": "^7.1.0",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "react": "18.3.1",
+    "react-content-loader": "^7.0.2",
     "react-native": "0.76.5",
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.21.2",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "^3.16.5",
     "react-native-safe-area-context": "^5.0.0",
     "react-native-screens": "^4.3.0",
+    "react-native-svg": "^15.10.1",
     "react-native-toast-message": "^2.2.1",
     "react-native-vector-icons": "^10.2.0"
   },
