--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-firebase/app": "^21.6.1",
     "@react-native-firebase/firestore": "^21.6.1",
     "@react-native-firebase/storage": "^21.6.1",
+    "@react-native-segmented-control/segmented-control": "^2.5.7",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/drawer": "^7.1.1",
     "@react-navigation/native": "^7.0.14",
@@ -22,10 +23,13 @@
     "react": "18.3.1",
     "react-content-loader": "^7.0.2",
     "react-native": "0.76.5",
+    "react-native-date-picker": "^5.0.8",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.21.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^13.0.1",
+    "react-native-pager-view": "^6.6.1",
     "react-native-reanimated": "^3.16.5",
     "react-native-safe-area-context": "^5.0.0",
     "react-native-screens": "^4.3.0",
