--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.1.0",
+    "@reduxjs/toolkit": "^2.5.0",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "react": "18.3.1",
     "react-content-loader": "^7.0.2",
@@ -30,12 +31,13 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^13.0.1",
     "react-native-pager-view": "^6.6.1",
-    "react-native-reanimated": "^3.16.5",
+    "react-native-reanimated": "3.16.5",
     "react-native-safe-area-context": "^5.0.0",
     "react-native-screens": "^4.3.0",
     "react-native-svg": "^15.10.1",
     "react-native-toast-message": "^2.2.1",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -50,6 +52,7 @@
     "@react-native/typescript-config": "0.76.5",
     "@types/lodash": "^4.17.13",
     "@types/react": "^18.2.6",
+    "@types/react-content-loader": "^4.0.0",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
