--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.1.0",
     "@reduxjs/toolkit": "^2.5.0",
+    "apisauce": "^3.1.0",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "react": "18.3.1",
     "react-content-loader": "^7.0.2",
