--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-firebase/app": "^21.6.1",
+    "@react-native-firebase/crashlytics": "^21.12.0",
     "@react-native-firebase/firestore": "^21.6.1",
     "@react-native-firebase/storage": "^21.6.1",
     "@react-native-segmented-control/segmented-control": "^2.5.7",
