--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/geolocation": "^3.4.0",
     "@react-native-firebase/app": "^21.6.1",
     "@react-native-firebase/crashlytics": "^21.12.0",
     "@react-native-firebase/firestore": "^21.6.1",
@@ -31,6 +32,7 @@
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.21.2",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-maps": "^1.22.1",
     "react-native-modal": "^13.0.1",
     "react-native-pager-view": "^6.6.1",
     "react-native-reanimated": "3.16.5",
