--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@react-native-firebase/app": "^21.6.1",
     "@react-native-firebase/crashlytics": "^21.12.0",
     "@react-native-firebase/firestore": "^21.6.1",
+    "@react-native-firebase/messaging": "^21.14.0",
     "@react-native-firebase/storage": "^21.6.1",
     "@react-native-segmented-control/segmented-control": "^2.5.7",
+    "@react-native-seoul/masonry-list": "^1.4.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/drawer": "^7.1.1",
     "@react-navigation/native": "^7.0.14",
@@ -24,6 +26,7 @@
     "@reduxjs/toolkit": "^2.5.0",
     "apisauce": "^3.1.0",
     "babel-plugin-transform-remove-console": "^6.9.4",
+    "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-content-loader": "^7.0.2",
     "react-native": "0.76.5",
@@ -31,17 +34,22 @@
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.21.2",
+    "react-native-heroicons": "^4.0.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "^1.22.1",
     "react-native-modal": "^13.0.1",
     "react-native-pager-view": "^6.6.1",
     "react-native-reanimated": "3.16.5",
+    "react-native-reanimated-carousel": "^4.0.2",
+    "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^5.0.0",
     "react-native-screens": "^4.3.0",
     "react-native-svg": "^15.10.1",
     "react-native-toast-message": "^2.2.1",
     "react-native-vector-icons": "^10.2.0",
-    "react-redux": "^9.2.0"
+    "react-native-youtube-iframe": "^2.3.0",
+    "react-redux": "^9.2.0",
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
